Small tweak to topic map location to make left aligned to avoid going out of view on narrow browsers

--- a/assets/stylesheets/common/locations.scss
+++ b/assets/stylesheets/common/locations.scss
@@ -55,7 +55,6 @@
   position: absolute;
   z-index: 9999;
   top: initial;
-  right: 0;
   width: 330px;
   height: 250px;
   top: 30px;
